tests/errors/syntax/only_expressions_in_arguments_for_signatures.odl
main :: () -> void {
    (int, x := 1) -> void;
};